--- a/css/layout.css
+++ b/css/layout.css
@@ -33,7 +33,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: #161415 url(../images/ws.jpg) no-repeat top center;
+   background: #161415 url(../images/photo.jpg) no-repeat top center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
@@ -51,7 +51,7 @@ header .banner {
    display: inline-block;
    vertical-align: middle;
    margin: 0 auto;
-   width: 85%;
+   width: 80%;
    padding-bottom: 30px;s
    text-align: center;
 }
